fix link icon alignment

--- a/app/styles/overrides.scss
+++ b/app/styles/overrides.scss
@@ -23,3 +23,8 @@ div.lt-body-wrap > table {
   > *.error   { background: $red; }
   > *.default { background: $turquoise; }
 }
+
+// fixes
+a.align-fix > .icon {
+  padding-bottom: 0.4rem;
+}
